--- a/lib/JumpScale/lib/kvm/templates/machine.xml
+++ b/lib/JumpScale/lib/kvm/templates/machine.xml
@@ -1,7 +1,6 @@
  <domain type='kvm'>
         <name>{{machinename}}</name>
         <memory unit='MB'>{{memory}}</memory>
-        <currentMemory unit='MB'>{{memory}}</currentMemory>
         <vcpu placement='static'>{{nrcpu}}</vcpu>
         <os>
             <type arch='x86_64'>hvm</type>
@@ -24,21 +23,13 @@
                 <target dev='vda' bus='virtio'/>
                 <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
             </disk>
-            <controller type='usb' index='0'>
-                <alias name='usb0'/>
-                <address type='pci' domain='0x0000' bus='0x00' slot='0x01' function='0x2'/>
-            </controller>
-            <controller type='ide' index='0'>
-                <alias name='ide0'/>
-                <address type='pci' domain='0x0000' bus='0x00' slot='0x01' function='0x1'/>
-            </controller>
             <interface type='network'>
-                <source network='{{network}}'/>
+                <source network='public'/>
                 <mac address='{{macaddress}}'/>
-                <target dev='{{machinename}}-{{vxlan}}' />
-                <model type='virtio'/>
-                <address type='pci' domain='0x0000' bus='0x00' slot='0x03' function='0x0'/>
             </interface>
+            <graphics type='vnc' autoport='yes' listen='0.0.0.0'>
+                <listen type='address' address='0.0.0.0'/>
+            </graphics>
             <serial type='pty'>
                 <source path='/dev/pts/1'/>
                 <target port='0'/>
@@ -49,20 +40,6 @@
                 <target type='serial' port='0'/>
                 <alias name='serial0'/>
             </console>
-	    <input type='mouse' bus='ps2'/>
-	    <input type='tablet' bus='usb'/>
-            <graphics type='vnc' autoport='yes' listen='0.0.0.0'>
-                <listen type='address' address='0.0.0.0'/>
-            </graphics>
-            <video>
-                <model type='cirrus' vram='9216' heads='1'/>
-                <alias name='video0'/>
-                <address type='pci' domain='0x0000' bus='0x00' slot='0x02' function='0x0'/>
-            </video>
-            <memballoon model='virtio'>
-                <alias name='balloon0'/>
-                <address type='pci' domain='0x0000' bus='0x00' slot='0x05' function='0x0'/>
-            </memballoon>
         </devices>
  </domain> 
 
