--- a/lib/JumpScale/lib/kvm/templates/machine.xml
+++ b/lib/JumpScale/lib/kvm/templates/machine.xml
@@ -26,19 +26,19 @@
             <interface type='network'>
                 <source network='brmgmt'/>
                 <mac address='{{macaddress1}}'/>
-                <guest dev='eth0'/>
+                <guest dev='mgmt'/>
                 <model type='virtio'/>
             </interface>
             <interface type='network'>
                 <source network='brpub'/>
                 <mac address='{{macaddress2}}'/>
-                <guest dev='eth1'/>
+                <guest dev='pub'/>
                 <model type='virtio'/>
             </interface>
             <interface type='network'>
                 <source network='brtmp'/>
                 <mac address='{{macaddress3}}'/>
-                <guest dev='eth2'/>
+                <guest dev='tmp'/>
                 <model type='virtio'/>
             </interface>
             <graphics type='vnc' autoport='yes' listen='0.0.0.0'>
