client spec is now served from /spore/client endpoint
the client can be generated on the fly directly from the server

--- a/lib/JumpScale/baselib/swaggergen/templates/macro.tmpl
+++ b/lib/JumpScale/baselib/swaggergen/templates/macro.tmpl
@@ -1,6 +1,6 @@
 {% from 'table.tmpl' import table %}
 
-{% macro handlerName(name) %}{{name}}Handler{%- endmacro %}
+{% macro handlerName(name) %}{{name}}_Handler{%- endmacro %}
 
 {% macro paramsQuery(params)%}
 {% for p in params.query %}
