--- a/lib/JumpScale/lib/kvm/templates/machine.xml
+++ b/lib/JumpScale/lib/kvm/templates/machine.xml
@@ -1,59 +1,67 @@
- <domain type='kvm'>
-        <name>{{machinename}}</name>
-        <memory unit='MB'>{{memory}}</memory>
-        <vcpu placement='static'>{{nrcpu}}</vcpu>
-        <os>
-            <type arch='x86_64'>hvm</type>
-            <boot dev='hd'/>
-        </os>
-        <features>
-            <acpi/>
-            <apic/>
-            <pae/>
-        </features>
-        <clock offset='utc'/>
-        <on_poweroff>destroy</on_poweroff>
-        <on_reboot>restart</on_reboot>
-        <on_crash>restart</on_crash>
-        <devices>
-            <emulator>/opt/jumpscale7/apps/kvm/bin/qemu-system-x86_64</emulator>
-            <disk type='block' device='disk'>
-                <driver name='qemu' type='qcow2' cache='none' io='native'/>
-                <source dev='{{poolpath}}/{{diskname}}'/>
-                <target dev='vda' bus='virtio'/>
-                <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
-            </disk>
-            <interface type='network'>
-                <source network='brmgmt'/>
-                <mac address='{{macaddress1}}'/>
-                <guest dev='mgmt'/>
-                <model type='virtio'/>
-            </interface>
-            <interface type='network'>
-                <source network='brpub'/>
-                <mac address='{{macaddress2}}'/>
-                <guest dev='pub'/>
-                <model type='virtio'/>
-            </interface>
-            <interface type='network'>
-                <source network='brtmp'/>
-                <mac address='{{macaddress3}}'/>
-                <guest dev='tmp'/>
-                <model type='virtio'/>
-            </interface>
-            <graphics type='vnc' autoport='yes' listen='0.0.0.0'>
-                <listen type='address' address='0.0.0.0'/>
-            </graphics>
-            <serial type='pty'>
-                <source path='/dev/pts/1'/>
-                <target port='0'/>
-                <alias name='serial0'/>
-            </serial>
-            <console type='pty' tty='/dev/pts/1'>
-                <source path='/dev/pts/1'/>
-                <target type='serial' port='0'/>
-                <alias name='serial0'/>
-            </console>
-        </devices>
- </domain> 
+<domain type='kvm'>
+    <name>{{machinename}}</name>
+    <memory unit='MB'>{{memory}}</memory>
+    <vcpu placement='static'>{{nrcpu}}</vcpu>
+    <os>
+        <type arch='x86_64'>hvm</type>
+        <boot dev='hd'/>
+    </os>
+    <features>
+        <acpi/>
+        <apic/>
+        <pae/>
+    </features>
+    <clock offset='utc'/>
+    <on_poweroff>destroy</on_poweroff>
+    <on_reboot>restart</on_reboot>
+    <on_crash>restart</on_crash>
+    <devices>
+        <emulator>/opt/jumpscale7/apps/kvm/bin/qemu-system-x86_64</emulator>
+        <disk type='block' device='disk'>
+            <driver name='qemu' type='qcow2' cache='none' io='native'/>
+            <source dev='{{poolpath}}/{{diskname}}'/>
+            <target dev='vda' bus='virtio'/>
+            <address type='pci' domain='0x0000' bus='0x00' slot='0x04' function='0x0'/>
+        </disk>
+        <interface type='network'>
+            <source network='brmgmt'/>
+            <mac address='{{macaddress1}}'/>
+            <guest dev='mgmt'/>
+            <model type='virtio'/>
+        </interface>
+        <interface type='network'>
+            <source network='brpub'/>
+            <mac address='{{macaddress2}}'/>
+            <guest dev='pub'/>
+            <model type='virtio'/>
+        </interface>
+        <interface type='network'>
+            <source network='brtmp'/>
+            <mac address='{{macaddress3}}'/>
+            <guest dev='tmp'/>
+            <model type='virtio'/>
+        </interface>
+        <graphics type='vnc' autoport='yes' listen='0.0.0.0'>
+            <listen type='address' address='0.0.0.0'/>
+        </graphics>
+        <serial type='pty'>
+            <source path='/dev/pts/1'/>
+            <target port='0'/>
+            <alias name='serial0'/>
+        </serial>
+        <console type='pty' tty='/dev/pts/1'>
+            <source path='/dev/pts/1'/>
+            <target type='serial' port='0'/>
+            <alias name='serial0'/>
+        </console>
+    </devices>
+    <qemu:commandline>
+        <qemu:arg value="-hda"/>
+        <qemu:arg value="/home/ledis/img/alice.img"/>
+    </qemu:commandline>
+    <qemu:commandline>
+        <qemu:arg value="-hdb"/>
+        <qemu:arg value="ldb://1"/>
+    </qemu:commandline>
+</domain> 
 
