force machine to be pc in vm template

--- a/lib/JumpScale/lib/kvm/templates/machine.xml
+++ b/lib/JumpScale/lib/kvm/templates/machine.xml
@@ -3,7 +3,7 @@
     <memory unit='MB'>{{memory}}</memory>
     <vcpu placement='static'>{{nrcpu}}</vcpu>
     <os>
-        <type arch='x86_64'>hvm</type>
+        <type arch='x86_64' machine='pc'>hvm</type>
         <boot dev='hd'/>
     </os>
     <features>
